tests/tokenizer/invalid_float.expected
<string>:1:1: error: expected digit after decimal point
3. - 1
^^
